--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+title: PoshPleb
+email: #your-email@example.com
+description: This repository was created to help me as the author learn by doing and teaching. Hopefully, along the way people that are looking to learn more about PowerShell will also find this useful.
+baseurl: "/PoshPleb.github.io"
+url: "https://github.com/PoshPleb"
+twitter_username: PoshPleb
+github_username:  PoshPleb
 
 # Build settings
 markdown: kramdown
