--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
@@ -15,16 +14,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: PoshPleb
-email: #your-email@example.com
-description: This repository was created to help me as the author learn by doing and teaching. Hopefully, along the way people that are looking to learn more about PowerShell will also find this useful.
-baseurl: "/PoshPleb.github.io"
-url: "https://github.com/PoshPleb"
+#email: your-email@example.com
+description: Website dedicated to learning PowerShell
+baseurl: ""
+url: "https://github.com/PoshPleb/PoshPleb.github.io"
 twitter_username: PoshPleb
 github_username:  PoshPleb
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: minima
 plugins:
   - jekyll-feed
 
@@ -39,6 +38,3 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-=======
-theme: jekyll-theme-slate
->>>>>>> ff72587628248d99345a89684793e328da726c95
